Fix for gap under search when clicking Webref button

--- a/cloud_front_demo/assets/css/custom.less
+++ b/cloud_front_demo/assets/css/custom.less
@@ -687,6 +687,7 @@ html {
 
 .adv_search_container {
   background: @SecondaryColor;
+  min-height: 138px;
 }
 
 .adv_search_box2 {
